unpackaged/main/default/objects/Insurance__c/fields/Currently_Active__c.field-meta.xml
<CustomField>
    <fullName>Currently_Active__c</fullName>
    <formula>IF(   TODAY()    &lt;=    End_Date__c    ,

true, 
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currently Active</label>
    <type>Checkbox</type>
</CustomField>