unpackaged/main/default/objects/Insurance__c/fields/Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider__c</fullName>
    <label>Insurance Provider</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aetna</fullName>
            </value>
            <value>
                <fullName>BCBS (Blue Cross Blue Shield)</fullName>
            </value>
            <value>
                <fullName>Champva</fullName>
            </value>
            <value>
                <fullName>Cigna</fullName>
            </value>
            <value>
                <fullName>Humana</fullName>
            </value>
            <value>
                <fullName>Mail Handlers Benefit Plan</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Medicare Seniorcare</fullName>
            </value>
            <value>
                <fullName>Superior Medicaid</fullName>
            </value>
            <value>
                <fullName>SWHP (Scott &amp; White Health Plan)</fullName>
            </value>
            <value>
                <fullName>United Healthcare</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>