unpackaged/main/default/objects/Insurance__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Insurances</relationshipLabel>
    <relationshipName>Insurances</relationshipName>
    <type>Lookup</type>
</CustomField>