unpackaged/main/default/objects/Insurance__c/fields/Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Number__c</fullName>
    <inlineHelpText>Your Member Number is your individual ID for your Health Plan</inlineHelpText>
    <label>Member Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>