unpackaged/main/default/objects/Insurance__c/fields/Monthly_Out_Of_Pocket_BC_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Out_Of_Pocket_BC_Treatment__c</fullName>
    <label>Monthly Out Of Pocket: BC Treatment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>