unpackaged/main/default/objects/Insurance__c/fields/Subscriber_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_First_Name__c</fullName>
    <label>Subscriber First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>