unpackaged/main/default/objects/Insurance__c/fields/Subscriber_Number__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Number__c</fullName>
    <inlineHelpText>Your Subscriber Number is your employer or group ID for your Health Plan</inlineHelpText>
    <label>Subscriber Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>