unpackaged/main/default/objects/Insurance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Insurance_Provider__c</columns>
    <columns>Member__c</columns>
    <columns>Member_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>