unpackaged/main/default/objects/Insurance__c/listViews/My_Insurance.listView-meta.xml
<ListView>
    <fullName>My_Insurance</fullName>
    <columns>NAME</columns>
    <columns>Insurance_Provider__c</columns>
    <columns>Member__c</columns>
    <columns>Member_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Insurance</label>
</ListView>